# secure-container-base-image-recommender

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  azure_linux_images.db  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_precommit.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/prompts/: README.md  analyze-container-security.md  container-migration-guide.md  recommend-secure-base-image.md  search-secure-images.md  zero-vulnerability-images.md
.github/workflows/: build-mcp-server.yml  ci.yml  nightly-registry-scan.yml
config/: repositories.txt
docs/: MCP_SERVER.md  database.md  nightly_recommendations.md  recommendations.md
docs/images/: architecture.md
scripts/: generate_nightly_recommendations.py  generate_nightly_recommendations_md.py  test.sh
src/: azure_linux_images.db  cli.py  database.py  image_analyzer.py  init_database.py  populate_db.py  recommendation_engine.py  registry_scanner.py  reset_database.py  utils.py
tests/: README.md  conftest.py
tests/e2e/: __init__.py  test_registry_scanning_e2e.py
tests/integration/: test_recommendation_workflow.py
tests/test_data/: sample_database.json  sample_syft_output.json
tests/unit/: __init__.py  test_database.py  test_image_analyzer_simple.py  test_nightly_recommendations.py  test_recommendation_engine.py  test_utils.py
web_ui/: README.md  app.py  requirements.txt  start.sh
web_ui/templates/: base.html  compare.html  error.html  image_detail.html  (+4 more)
